--- a/index.html
+++ b/index.html
@@ -6,11 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Crystal Collectors</title>
 </head>
 <body>
-    <div class="box text-center"></div>
+    <h1 class = "text-center">Crystals Collector</h1>
+    <p>You will be given a random number at the start of the game.
+        There are four crystals below.  By clicking on a crystal, you
+        will add a specific amount of points to your total score.
+        You win the game by matching your total score to the random
+        number, you lose the game if your total score goes above the
+        random number.
+        The value of each crystal is hidden from you until you click
+        on it.
+        Each time when the game starts, the game will change the values
+        of each crystal. 
+
+    </p>
+    <div class="box container-fluid text-center"></div>
+    <div class="w-status status text-center">Wins:</div>
+    <div class="l-status status text-center">Losses:</div>
     <div class="rocks" id="crystal1" data-rand = "num">
         <img src="assets/images/crystal1.jpeg" alt="Crystal #1">
     </div>
@@ -21,8 +37,9 @@
         <img src="assets/images/crystal3.jpeg" alt="Crystal #3">
     </div>
     <div class="rocks" id="crystal4" data-rand = "num">
-        <img src="assets/images/crystal4.jpg" alt="Crystal #4">
+        <img src="assets/images/crystal4.jpeg" alt="Crystal #4">
     </div>
+    <div id="total-score" class="text-center"></div>
     
 </body>
 <script src="assets/javascript/game.js"></script>
